# renderer

./: justfile  settings.json
assimp/: Cargo.toml  Cargo.toml.gen
assimp-sys/: Cargo.toml  build.rs
assimp-sys/src/: anim.rs  camera.rs  cexport.rs  cfileio.rs  cimport.rs  importerdesc.rs  lib.rs  light.rs  material.rs  mesh.rs  metadata.rs  scene.rs  version.rs
assimp/src/: lib.rs
assimp/src/import/: mod.rs
assimp/src/scene/: animation.rs  camera.rs  face.rs  light.rs  material.rs  mesh.rs  node.rs  scene.rs  texture.rs
open-gl-rs/: Cargo.toml  TRACY.md  justfile
open-gl-rs/.cargo/: config.toml
open-gl-rs/src/: camera.rs  imgui_glfw.rs  main.rs  mesh.rs  model.rs  shader.rs  tracing.rs
open-gl-rs/src/shaders/: model_fs.glsl
