[package]
name = "assimp"
version = "0.3.1"
authors = ["Lee Jeffery <lee@leejeffery.co.uk>"]
edition = "2024"

description = "Rust bindings for the Assimp library"
repository = "https://github.com/Eljay/assimp-rs"

license = "MIT"
readme = "README.md"

[dependencies]
assimp-sys = {path = "../assimp-sys"}

[dependencies.cgmath]
version = "0.15.0"
optional = true

[dev-dependencies]
glium = "0.18.0"
cgmath = "0.15.0"
