[package]
name = "new-open-gl-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
assimp = {path = "../assimp"}
gl = "0.14.0"
glow = "0.14"
glfw = "0.61.0"
image = "0.25.9"
imgui = "0.12.0"
imgui-glow-renderer = "0.13.0"
nalgebra-glm = "0.20.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-tracy = { version = "0.11", optional = true }

[features]
tracy = ["tracing-tracy"]
